<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="false"
    android:layout_centerHorizontal="false"
    android:layout_centerVertical="false"
    android:foregroundGravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:paddingLeft="16dp">

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:layout_weight="0"
            android:backgroundTint="#FF5722"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:icon="@android:drawable/ic_menu_delete"
            app:iconGravity="textTop"
            app:iconSize="22dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingTop="35dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/aliasText"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/plate" />

        <TextView
            android:id="@+id/tvPlate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/marcaText"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/marca" />

        <TextView
            android:id="@+id/tvMarca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/modelText"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/model" />

        <TextView
            android:id="@+id/tvModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/cilindradaText"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/cilindrada" />

        <TextView
            android:id="@+id/tvCilindrada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/phoneText"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/telefon" />

        <TextView
            android:id="@+id/tvTelefon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="100dp">

        <CheckBox
            android:id="@+id/chBoxAutomatic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/automatic" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/lengthText"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/longitud" />

        <TextView
            android:id="@+id/tvLongitud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="50dp">

        <TextView
            android:id="@+id/latitudeText"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/latitiud" />

        <TextView
            android:id="@+id/tvLatitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <Button
            android:id="@+id/googleMapsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:backgroundTint="#00BCD4"
            android:gravity="center"
            android:onClick="cancelBtn"
            android:text="@string/obrirGoogleMaps" />

        <Button
            android:id="@+id/phoneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00BCD4"
            android:gravity="center"
            android:text="@string/trucar" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <Button
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#8BC34A"
            android:text="@string/editar" />
    </LinearLayout>

</LinearLayout>